Refactor HTML Code

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div>
                 <fieldset>
                     <legend>Have you read this book ?</legend>
-                <label for="read">Yes</label>
-                <input type="radio" id="read" name="read" value="Yes" >
+                <label for="read">True</label>
+                <input type="radio" id="read" name="read" value="true" >
 
-                <label for="read">No</label>
-                <input type="radio" id="no" name="read" value="No" checked>
+                <label for="read">False</label>
+                <input type="radio" id="no" name="read" value="false" checked>
 
             </fieldset>
             </div>
