--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="addNewBookDiv">
       <h2>Please use this form to add a new book to the library</h2>
       <div class="inputForm">
-        <form action="" method="get" id="bookSubmitForm">
+        <form action="" method="get" id="bookSubmitForm" novalidate>
           <div>
             <label for="author">Author Name:</label>
             <input id="author" type="text" name="author" required />
@@ -36,7 +36,7 @@
 
           <div>
             <label for="numberOfPages">Number of Pages:</label>
-            <input type="number" id="numberOfPages" name="numberOfPages" />
+            <input type="number" id="numberOfPages" name="numberOfPages" min="10" max="100" required/>
           </div>
 
           <div>
