--- a/index.html
+++ b/index.html
@@ -23,20 +23,23 @@
     <div class="addNewBookDiv">
       <h2>Please use this form to add a new book to the library</h2>
       <div class="inputForm">
-        <form action="" method="get" id="bookSubmitForm" novalidate>
+        <form action="" method="get" id="bookSubmitForm">
           <div>
             <label for="author">Author Name:</label>
-            <input id="author" type="text" name="author" required />
+            <input id="author" type="text" name="author" maxlength="500" required />
+            <span class="error" aria-live="polite"></span>
           </div>
 
           <div>
             <label for="title">Book Title:</label>
-            <input id="title" type="text" name="title" required />
+            <input id="title" type="text" name="title" maxlength="500" required />
+            <span class="error" aria-live="polite"></span>
           </div>
 
           <div>
             <label for="numberOfPages">Number of Pages:</label>
-            <input type="number" id="numberOfPages" name="numberOfPages" min="10" max="100" required/>
+            <input type="number" id="numberOfPages" name="numberOfPages" min="10" max="1000" required/>
+            <span class="error" aria-live="polite"></span>  
           </div>
 
           <div>
